[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/user interface/themes/MinimalUI/MinimalUI.tres" type="Theme" id=1]
[ext_resource path="res://src/user interface/ChangeSceneButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/screens/RegistrationScreen.gd" type="Script" id=3]
[ext_resource path="res://src/screens/prova.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/user interface/themes/DarkTheme/StyleBox/Panel.stylebox" type="StyleBox" id=6]
[ext_resource path="res://src/user interface/QuitButton.tscn" type="PackedScene" id=9]

[node name="RegistrationScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -252.0
margin_top = 50.0
margin_right = 252.0
margin_bottom = 130.0
custom_fonts/font = ExtResource( 5 )
text = "Registrazione"
uppercase = true

[node name="Background" type="TextureRect" parent="."]
margin_right = 1919.0
margin_bottom = 1080.0
expand = true

[node name="Menu1" type="VBoxContainer" parent="."]
anchor_left = 0.206771
anchor_top = 0.548148
anchor_right = 0.25
anchor_bottom = 0.548148
margin_left = -250.0
margin_top = -392.0
margin_right = 250.0
margin_bottom = 208.0
custom_constants/separation = 15
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NameField" type="LineEdit" parent="Menu1"]
margin_right = 582.0
margin_bottom = 108.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
align = 1
max_length = 10
placeholder_text = "Nome"

[node name="SurnameField" type="LineEdit" parent="Menu1"]
margin_top = 123.0
margin_right = 582.0
margin_bottom = 231.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
align = 1
max_length = 10
placeholder_text = "Cognome"

[node name="MailField" type="LineEdit" parent="Menu1"]
margin_top = 246.0
margin_right = 582.0
margin_bottom = 354.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
align = 1
placeholder_text = "Email"

[node name="PasswordField" type="LineEdit" parent="Menu1"]
margin_top = 369.0
margin_right = 582.0
margin_bottom = 477.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
align = 1
max_length = 10
secret = true
placeholder_text = "Password"

[node name="MedicCodeField" type="LineEdit" parent="Menu1"]
margin_top = 492.0
margin_right = 582.0
margin_bottom = 600.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
align = 1
secret = true
placeholder_text = "Codice Medico"

[node name="Menu2" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1275.0
margin_top = -880.0
margin_right = -62.0
margin_bottom = -499.0
custom_constants/separation = 15

[node name="RegisterButton" parent="Menu2" instance=ExtResource( 2 )]
margin_right = 583.0
margin_bottom = 117.0
rect_pivot_offset = Vector2( 200, 100 )
custom_fonts/font = ExtResource( 5 )
text = "REGISTRATI"

[node name="AlreadyRegisteredButton" parent="Menu2" instance=ExtResource( 2 )]
margin_top = 132.0
margin_right = 583.0
margin_bottom = 249.0
rect_pivot_offset = Vector2( 200, 100 )
custom_fonts/font = ExtResource( 5 )
text = "HO UN ACCOUNT"

[node name="QuitButton" parent="Menu2" instance=ExtResource( 9 )]
margin_top = 264.0
margin_right = 583.0
margin_bottom = 381.0
custom_fonts/font = ExtResource( 5 )
script = null

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="NotificationPanel" type="PanelContainer" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.784314 )
anchor_left = 0.5
anchor_top = 0.91875
anchor_right = 0.5
anchor_bottom = 0.91875
margin_left = -250.0
margin_top = -242.25
margin_right = 250.0
margin_bottom = -158.25
theme = ExtResource( 1 )
custom_styles/panel = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Notification" type="Label" parent="NotificationPanel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 498.0
margin_bottom = 82.0
size_flags_horizontal = 3
theme = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = ExtResource( 5 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[connection signal="pressed" from="Menu2/RegisterButton" to="." method="_on_RegisterButton_pressed"]
[connection signal="pressed" from="Menu2/AlreadyRegisteredButton" to="." method="_on_AlreadyRegisteredButton_pressed"]
[connection signal="pressed" from="Menu2/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
